# info-indus

./: CMakeLists.txt  CMakePresets.json
STM32-files/: stm32_flash.ld
STM32-files/Polytech-library/: CMakeLists.txt
STM32-files/Polytech-library/inc/: Adc.h  Clocks.h  Uart.h  code_eleve.h
STM32-files/Polytech-library/src/: Adc.c  Clocks.c  Spi.c  Timer.c  Uart.c  code_eleve.c
STM32-files/cmsis_lib/: CMakeLists.txt
TP01/spi/: CMakeLists.txt
TP01/spi/src/: main.c
TP01/try-sawtooth/: CMakeLists.txt
TP02/rs232/src/: rs232  rs232.c
TP05/ecg/: filtre.py
TP05/filtrage/: CMakeLists.txt
TP05/filtrage/src/: filtre.c  filtre.h  main.c
tests/: arrayshift  arrayshift.c
try-sawtooth/: CMakeLists.txt  main.c
